--- a/GonzalezDebora_gop_voters_hisp_changes.Rmd
+++ b/GonzalezDebora_gop_voters_hisp_changes.Rmd
@@ -38,7 +38,7 @@ precinct_data <- read_dta("dataverse_files/HHHDemogThreatRepArchive/PrecinctData
 \newpage
 # Abstract
 
-Hilla, Hopkins, and Huberc (2019) argue that demographic changes are not associated with increased Republican vote share at the precinct level between 2012 and 2016. I succesfully replicated Hilla, Hopkins and Huberc’s results, except for minor discrepancies which do not affect their conclusions. A robustness test using a subset analysis focusing on the state of FL indicates, despite minor state-specific deviance and poor statistical significance due to reduced sample size, that the authors' overall findings are valid. In addition, I constructed a fixed effects model by state, which further confirmed original findings even under fixed effects assumptions. In a twist of analysis, I constructed a new model analyzing the association between Republican vote share and economic indicators while controlling for Hispanic proportion. The latter models appear to indicate a stronger relationship between unemployment proportion change and GOP vote share than between changes in Hispanic proportion and GOP vote share, which suggests an opportunity for further research. 
+Hilla, Hopkins, and Huberc (2019) argue that demographic changes are not associated with increased Republican vote share at the precinct level between 2012 and 2016. I succesfully replicated Hilla, Hopkins and Huberc’s results, except for minor discrepancies which do not affect their conclusions. A robustness test using a subset analysis focusing on the state of FL indicates, despite minor state-specific deviance and poor statistical significance due to reduced sample size, that the authors' overall findings are valid. Another test focusing on the effect of individual states on the overall findings was also found to support the original paper's robustness. In addition, I constructed a fixed effects model by state, which further confirmed original findings even under fixed effects assumptions. In a twist of analysis, I constructed a new model analyzing the association between Republican vote share and economic indicators while controlling for Hispanic proportion. The latter models appear to indicate a stronger relationship between unemployment proportion change and GOP vote share than between changes in Hispanic proportion and GOP vote share, which suggests an opportunity for further research. 
 
 
 
@@ -112,7 +112,7 @@ try2 %>%
 A visual association between changes of Republican Vote Share and Hispanic Population Proportion Change from 2012-2016. Random sample of 2000 precincts colored by state [@ggplot]. A loess line highlights the general trend of the data [@smooth]. I also added the aesthetic enhancement of size as number of voters in 2016 in each precinct [@data].
  
  
-I determined two main ways to examine the robustness of these models: 1) I examined the model outputs at higher level of aggregation by constructing the same models using a subset of data by state. In this case, I used Florida, which is my home state and one that has received a very high influx of hispanics over the last decade. Despite, the smaller sample, which inherently causes decreased statistical significance, HHH's overall conclusions are validated. 2) Heterogeneity in fixed effects models means different means among categories such as states and year. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors [@fixed]. However, fixed effects models can control and estimate these effects. I constructed mirror models using plm(y ~ x, data = mydata, within = “state”) and found that a fixed effects model do not alter the overarching conclusions even when absorbing the effects particular to each state [@fixed2]. Both methods resulted in successful measures of robustness confirming HHH's original quantitative findings, if not the exact theoretical claim. 
+I determined two main ways to examine the robustness of these models: 1) I examined the model outputs at higher level of aggregation by constructing the same models using a subset of data by state. In this case, I used Florida, which is my home state and one that has received a very high influx of hispanics over the last decade. Despite, the smaller sample, which inherently causes decreased statistical significance, HHH's overall conclusions are validated. In addition, I constructed a series of models excluding a different state each time to examine whether any single state was shaping the conclusions and found that no individual state is driving the original conclusions. 2) Heterogeneity in fixed effects models means different means among categories such as states and year. Unobserved heterogeneity is simply variation/differences among cases which are not measured. When the data can be grouped by such categories, and there are also some evidences indicating heterogeneity, the OLS is not sufficient to control the effects of these unobservable factors [@fixed]. However, fixed effects models can control and estimate these effects. I constructed mirror models using plm(y ~ x, data = mydata, within = “state”) and found that a fixed effects model do not alter the overarching conclusions even when absorbing the effects particular to each state [@fixed2]. Both methods resulted in successful measures of robustness confirming HHH's original quantitative findings, if not the exact theoretical claim. 
 
 In addition to exploring the robustness of HHH's findings, I built a new model using the original datasets to explore the association between economic indicators and changes in Republican voters. I constructed a series of models that explain shifts in GOP share of voters in terms of changes in hispanic proportion, changes in unemployment, and proportion change of poor to consider the economic influences on Republican voters share shifts respectively and in combination. In addition, I construct a model to examine how the interaction of change in unemployment and change in Hispanic proportion affect GOP vote share in each time period. I also construct a model using only changes in unemployment and proportion change of poor as explanatory variables to GOP share in these intervals. The results show that unemployment may have an even stronger effect on GOP share of voters between 2011-2016, but not in the 2000-2016, indicating an interesting trend in.... (penalization of candidates, demographic preferences, etc?).
  
@@ -144,9 +144,10 @@ Notably, the authors discuss the research on the different ways in which influx 
 
 I was able to successfully translate and replicate the main analysis of the original paper despite minor deviances that did not affect the overall conclusions of the study. Since the original analysis was done in Stata, this project required the translation of the code and a comparative analysis. A full replication of Table 1 and Figure 1 using the most approximate R tools of the original paper can be found in the appendix. 
 
+\newpage
 # Robustness Check #1: Subsetting the Data
 
-This exercise takes the dataset and runs the main 8 original models on a smaller subset of the data. In this case, the precincts in the state of Florida. Comparing these coefficients and their significance to those of the original data models solidify HHH's central argument as even a small subset of the data seems to confirm their generalized findings. In addition, these models provide insight into the consequences of slicing the data in different ways and the potential effect individual states may be having on the data as a whole.
+One way to test for robustness is to examine the ways in which different states affect the overall trends. Notably, if a subset of the data has largely skewed results, the original findings are not invalidated given the diminished statistical significance of the subset, but the results' predictive applicability and generizability can be questioned. For this project, I decided to run the main 8 original models on a smaller subset of the data - the precincts in the state of Florida. Examining the single state allowed me to zoom in and see how these associations look like in a state that is increasingly known as a swing state in U.S. elections. 
 
 ```{r fl_subset, results="asis"}
 
@@ -249,9 +250,121 @@ stargazer(flm1, flm2, flm3, flm4, flm5, flm6, flm7, flm8,
          
          # Need to work on getting rid of dependent variable row.
          
-         column.sep.width = "-15pt",
+         column.sep.width = "-20pt",
          no.space = T)
 ```
+
+
+Despite the lack of statistical significance across many of the coefficients in Table 1, comparing these models' output and their significance to those of the original data models solidify HHH's central finding as even a small subset of the data seems to confirm their overarching conclusion that demographic shifts do not lead to increased GOP share of votes, but rather the opposite. I think the question can now become whether or not the influx of hispanics can be interpreted as an influx of immigrants (which is a big discussion in the theoretical part of the original paper) or if it simply refers to U.S. born Hispanics, which have been found in previous research to vote in favor of Democratic candidates. In the main eight regressions explored in the study, foreign born population is not included as an explanatory variable control, so this change in Hispanic proportion can be assumed to include any Hispanic in America. Notably, the appendix of the original paper contains a table that explores the effect of foreign born changes on GOP vote share. Perhaps the relationships uncovered through those models can help clarify the more specific claim discussed in the literature. Unfortunately, I was unable to gain access to the appendix for this project. Overall, these models serve as a robustness check to HHH's findings and provide some insight into the consequences of slicing the data in different ways and the potential effect individual states may be having on the data as a whole, which is further explored in the next set of models.
+
+
+
+Another similar, but more extensive way to test for robustness, is to build a series of models in which a different state is substracted from the sample each time. This allows to observe whether the overall trend is largely skewed by any individual state.
+
+
+```{r state effect, results="asis"}
+
+# Evaluating individual state effects mirroring original Model 3 (2011-2016):
+
+# The states: Florida, Georgia, Michigan, Nevada, Ohio, Pennsylvania, and Washington
+
+# The datasets minus 1 state:
+
+no_fl <- precinct_data %>% 
+  filter(st != "FL")
+
+no_GA <- precinct_data %>% 
+  filter(st != "GA")
+  
+no_MI <- precinct_data %>% 
+  filter(st != "MI")
+  
+no_NV <- precinct_data %>% 
+  filter(st != "NV")
+  
+no_OH <- precinct_data %>% 
+  filter(st != "OH")
+
+no_PA <- precinct_data %>% 
+  filter(st != "PA")
+
+no_WA <- precinct_data %>% 
+  filter(st != "WA")
+
+# Model 3 minus one state:
+
+no_flm <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = no_fl, 
+         weights = weight)
+
+no_gam <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = no_GA, 
+         weights = weight) 
+
+no_mim <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = no_MI, 
+         weights = weight) 
+
+no_nvm <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = no_NV, 
+         weights = weight) 
+
+no_ohm <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = no_OH, 
+         weights = weight) 
+
+no_pam <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = no_PA, 
+         weights = weight) 
+
+no_wam <-  lm(gop_propvote_change ~ d1611_hispanic + l11_hispanic + d1611_poor + d1611_unemp + 
+           d1611_rent + d1611_rent_income + d1611_housing_150 + d1611_mfg + d1611_pop + 
+           l11_poor + l11_unemp + l11_rent + l11_rent_income + l11_housing_150 + l11_mfg + 
+           l11_density + l11_black + l11_educba + countyid + decile_repvote12, 
+         data = no_WA, 
+         weights = weight) 
+
+
+
+stargazer(no_flm, no_gam, no_mim, no_nvm, no_ohm, no_pam, no_wam,
+          title = "Change in Republican vote share 2012 to 2016 and change in Hispanic population",
+         omit = c("d1611_poor", "d1611_unemp", "d1611_rent", "d1611_rent_income", "d1611_housing_150", "d1611_mfg",
+                  "d1611_pop", "l11_poor", "l11_unemp", "l11_rent", "l11_rent_income", "l11_housing_150", "l11_mfg",
+                  "l11_density", "l11_black", "l11_educba", "countyid", "d1600_poor", "d1600_unemp", "d1600_mfg",
+                  "d1600_pop", "l00_poor", "l00_unemp", "l00_mfg", "l00_density", "l00_black", "l00_educba",
+                  "decile_repvote12"),
+                  covariate.labels = c("Change in Prop. Hispanic, 2011 to 2016",
+                              "Prop. Hispanic 2011"),
+         omit.stat = c("f", "ser"),
+         dep.var.labels.include = FALSE,
+         
+         # Need to work on getting rid of dependent variable row.
+         
+         column.sep.width = "-8pt",
+         no.space = T)
+
+
+```
+
+The coefficients of these models (each of which excludes a different state) consistently support HHH's findings and conclude that the results are not driven by any single state. 
 
 # Robutness Check #2: Fixed Effects Model
 
